# pau

./: .gitignore  NOTATKI  quix.yaml
.github/workflows/: deploy_to_prod.yaml  test_and_deploy_to_dev.yaml
docker_compose/: Makefile  feature_pipeline.yml  historical_pipeline.yml
price_predictor/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  app.yaml  comet.credentials.env  hopsworks.credentials.env  ohlc_data.csv  pyproject.toml  requirements.txt
price_predictor/src/: api.py  config.py  feature_engineering.py  hopsworks_api.py  model_registry.py  ohlc_data_reader.py  prediction.py  preprocessing.py  price_predictor.py  training.py  utils.py
price_predictor/src/models/: current_price_baseline.py  moving_average_baseline.py  xgboost_model.py
price_predictor/tests/: comet_test.py  hopsworks_test.py  test_utils.py
topic_to_feature_store/: Dockerfile  Makefile  app.yaml  credentials.env  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml  requirements.txt
topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
trade_producer/: .dockerignore  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml  requirements.txt
trade_producer/src/: config.py  main.py
trade_producer/src/trade_data_source/: base.py  kraken_rest_api.py  kraken_websocket_api.py
trade_to_ohlc/: Dockerfile  Makefile  app.yaml  historical.dev.env  historical.prod.env  live.dev.env  live.prod.env  pyproject.toml
trade_to_ohlc/src/: config.py  main.py
trade_to_ohlc/state/trade_to_ohlcv_consumer_group/tumbling_window_60000_reduce/trade/0/: 000017.sst  000018.sst  000026.sst  000027.sst  000028.sst  000036.sst  000037.sst  000038.sst  IDENTITY  LOG  LOG.old.1726849510301290  LOG.old.1726849568567868  LOG.old.1727115666495588  LOG.old.1728479864829411  LOG.old.1728479939494179  MANIFEST-000046  OPTIONS-000048
trade_to_ohlc/state/trade_to_ohlcv_consumer_group/tumbling_window_60000_reduce/trade_historical/0/: 000013.sst  000014.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005
trade_to_ohlc/state/trade_to_ohlcv_consumer_group_2/tumbling_window_60000_reduce/trade/0/: IDENTITY  LOG
trade_to_ohlc/state/trade_to_ohlcv_historical_consumer_group/tumbling_window_60000_reduce/trade_historical/0/: IDENTITY  LOG
trade_to_ohlc/tests/: test_ohlcv.py
