[tool.poetry]
name = "price-predictor"
version = "0.1.0"
description = ""
authors = ["Franek Migaszewski <fmigaszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
loguru = "^0.7.2"
hopsworks = "^3.7.0"
comet-ml = "^3.47.0"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"
xgboost = "^2.1.1"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"
ta-lib = "^0.4.32"

#[tool.poetry.dependencies]
#python = ">=3.10,<3.13"
#hopsworks = "^3.7.0"
#pydantic-settings = "^2.5.2"
#loguru = "^0.7.2"
#scikit-learn = "^1.5.2"
#comet-ml = "^3.46.0"
#xgboost = "^2.1.1"
#ta-lib = "^0.4.32"
#optuna = "^4.0.0"
#fastapi = "^0.115.0"
#uvicorn = "^0.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
