[tool.poetry]
name = "trade-producer"
version = "0.1.0"
description = ""
authors = ["Franek Migaszewski <fmigaszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
quixstreams = "^2.10.0"
loguru = "^0.7.2"
websocket-client = "^1.8.0"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
