[tool.poetry]
name = "trade-producer"
version = "0.1.0"
description = ""
authors = ["Franek Migaszewski <fmigaszewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
loguru = "^0.7.2"
quixstreams = "^3.0.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
